cert-manager-operator/base/cert-manager-certificate-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: cert-manager-certificate-policy-binding
spec:
  policyName: "cert-manager-certificate-policy"
  validationActions: [Deny]
#  matchResources:
#    namespaceSelector:
#      matchLabels:
#        environment: test
